# test_case_weather_website

./: .env_example  Makefile  README.md  pyproject.toml
tests/: test_weather_website.py
weather_website/: __init__.py  app.py  coords_of_city.py  weather_api.py  weather_data_parser.py
weather_website/templates/: 404.html  500.html  index.html
